test/library/standard/Set/zippering/arrayShorter2.good
4 5
arrayShorter2.chpl:16: error: halt reached - size mismatch in zippered iteration (dimension 0)
